# zthfs

./: .gitignore  2026-01-14-this-session-is-being-continued-from-a-previous-co.txt  Cargo.toml  LICENSE  README.md  README_zh.md  build.rs  deploy.sh  install.sh  proptest.toml  rust_out  tarpaulin-report.html  test_demo.sh  uninstall.sh
.github/workflows/: ci.yml
benches/: crypto_benchmarks.rs  filesystem_benchmarks.rs  integrity_benchmarks.rs  logging_benchmarks.rs
coverage/: tarpaulin-report.html
docs/: API.md  TESTING.md
docs/plans/: 2025-01-18-test-coverage-enhancement.md  2026-01-14-fuse-core-features-plan.md
src/: config.rs  errors.rs  key_derivation.rs  key_management.rs  lib.rs  main.rs  transactions.rs
src/core/: encryption.rs  integrity.rs  logging.rs  mod.rs
src/error_tests/: corruption_tests.rs  io_tests.rs  mod.rs  permission_tests.rs
src/fs_impl/: attr_ops.rs  chunk_ops.rs  dir_modify.rs  dir_read.rs  directory_ops.rs  file_attr_ops.rs  file_attrs.rs  file_copy.rs  file_create.rs  file_io.rs  file_management.rs  file_read.rs  file_write.rs  inode_ops.rs  metadata.rs  metadata_ops.rs  mod.rs  operations.rs  path_ops.rs  path_utils.rs  security.rs  space_ops.rs  sync_ops.rs  utils.rs
src/fs_impl/tests/: access_tests.rs  create_tests.rs  flush_tests.rs  fuse_test_utils.rs  getattr_tests.rs  lookup_tests.rs  mkdir_tests.rs  mod.rs  open_tests.rs  read_tests.rs  readdir_tests.rs  release_tests.rs  rename_tests.rs  rmdir_tests.rs  setattr_tests.rs  unlink_tests.rs  write_tests.rs
src/security_tests/: access_control_tests.rs  encryption_tests.rs  integrity_tests.rs  mod.rs
src/utils/: mod.rs
tests/: fuse_api_tests.rs  fuse_integration_test.rs  integration_basic.rs  integration_concurrent.rs  integration_fuse.rs  integration_stress.rs  property_tests.proptest-regressions  property_tests.rs  test_helpers.rs  test_request.rs
tests/fuse_reply/: mod.rs  reply_attr.rs  reply_create.rs  reply_data.rs  reply_empty.rs  reply_entry.rs  reply_open.rs  reply_write.rs
