[package]
name = "zthfs"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.16.0"
aes-gcm = "0.10"
crc32c = "0.6"
log = "0.4"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
libc = "0.2"
generic-array = "0.14"
typenum = "1.18"
xattr = "1.0"
tempfile = "3.0"
base64 = "0.22"
regex = "1.0"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[bench]]
name = "crypto_benchmarks"
harness = false
path = "benches/crypto_benchmarks.rs"
