[package]
name = "zthfs"
version = "0.1.0"
edition = "2024"

[dependencies]
fuser = "0.16.0"
aes-gcm = "0.10"
crc32c = "0.6"
blake3 = "1.8.2"
log = "0.4"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
anyhow = "1.0"
libc = "0.2.176"
typenum = "1.18"
xattr = "1.0"
tempfile = "3.0"
base64 = "0.22"
regex = "1.11.3"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
dashmap = "6.1.0"
tokio = { version = "1.47.1", features = ["full"] }
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.7.0"

[[bench]]
name = "crypto_benchmarks"
harness = false
path = "benches/crypto_benchmarks.rs"

[[bench]]
name = "integrity_benchmarks"
harness = false
path = "benches/integrity_benchmarks.rs"

[[bench]]
name = "filesystem_benchmarks"
harness = false
path = "benches/filesystem_benchmarks.rs"

[profile.release]
opt-level = 3        # enable highest level of optimization
lto = true           # enable link time optimization
codegen-units = 1    # use single code generation unit, for better optimization
panic = "abort"      # abort on panic, reduce binary size
strip = true         # remove debug symbols, further reduce binary size
debug = true         # keep debug information for production environment troubleshooting

[profile.bench]
inherits = "release" # inherit release configuration
debug = false        # remove debug information to get accurate benchmark results
